# stream-transcribe-server

./: gradlew  gradlew.bat
.github/workflows/: android-build.yml
example_app/: build.gradle
example_app/src/main/: AndroidManifest.xml
example_app/src/main/java/com/example/whisperexample/: MainActivity.kt  NativeWhisper.kt
gradle/wrapper/: gradle-wrapper.properties
stream_transcribe_server/: README.md  requirements.txt  server.py  start_session.py
stream_transcribe_server/android_sample/: AudioCaptureUpload.kt  README.md  WebSocketOverlay.kt
whisper_android/: CMakeLists.txt  LOCAL_BUILD.md  README.md  build.gradle
whisper_android/src/main/: AndroidManifest.xml
whisper_android/src/main/cpp/: whisper_jni.cpp  whisper_stub.cpp
whisper_android/src/main/java/com/example/whisper/: ExampleActivity.kt  NativeWhisper.kt
